--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,51 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.debug header{
+    
+    height: 400px;
+}
+
+.debug .navigation {
+    background-color: red;
+    height: 100px;
+}
+
+.debug .title{
+    width: 1170px;
+    background-color: blue;
+    height: 250px;
+}
+
+.debug section {
+    background-color: yellow;
+    height: 50px;
+    display: inline-block;
+}
+
+.debug .title-container{
+    height: 300px;
+    background-color: violet;
+}
+
+.logo,.login-area{
+    width: 25%;
+}
+
+.links{
+    width: 50%;
+}
+
+.flex-items{
+    width: 1170px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.flex-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
